# BTCAUDash

./: README.md  main.py  pyproject.toml
data/: backtest.py  backtested.parquet  data.py  raw_data.parquet
plots/: plot_generator.py  toggle_lines.html
