[project]
name = "btcaudash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "plotly>=6.0.1",
    "polars>=1.27.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
